<resources>
    <string name="app_name">i.fila</string>
    <string name="registrar">Registrar</string>
    <string name="entrar_como_convidado">Entrar como convidado</string>
    <string name="continuar">Continuar</string>
    <string name="registrar_title">Registrar</string>
    <string name="cancel">Cancelar</string>
    <string name="samePsswdTitle">Erro ao finalizar registro</string>
    <string name="samePsswdSupportText">*Senhas diferem</string>
    <string name="samePsswdDecline">Cancelar</string>
    <string name="samePsswdAccept">Aceitar</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="required">*Campo Obrigatório</string>
    <string name="incompleteFieldsTitle">Erro ao continuar registro</string>
    <string name="incompleteFields">Certifique-se de que todos os campos foram preenchidos corretamente</string>
    <string name="typeValidCpf">*Digite um CPF válido de 11 caracteres</string>
    <string name="typeValidNumber">*Digite um número válido de 11 caracteres</string>
    <string name="typeOnlyDigits">*Apenas dígitos são permitidos</string>
    <string name="minPasswd">*A senha deve conter no mínimo 6 caracteres com pelo menos 1 número</string>
    <string name="invalidBirth">*Você deve ter mais de 14 anos</string>
    <string name="invalidFutureDate">*Data inválida</string>
    <string name="invalidEmailFormat">*Formato de email inválido</string>
    <string name="bem_vindo">Bem-Vindo!</string>
    <string name="definaLogin">Defina suas informações de login</string>
    <string name="buttonCadastrar">Cadastrar</string>
    <string name="preCadastroFila">Em instantes, sua fila será cadastrada!</string>
    <string name="criar_fila">Criar fila</string>
    <string name="nome_do_local">Nome do Local</string>
    <string name="atender">Atender</string>
    <string name="fila_ativa">Fila Ativa</string>
    <string name="atendimento">Atendimento - 123</string>
    <string name="tamanho_atual">Tamanho atual - XX</string>
    <string name="codigo">Código</string>
    <string name="entrar_por_codigo">Entrar por código</string>
    <string name="digite_um_codigo_valido_de_estabelecimento">Digite um código válido de\nestabelecimento</string>
    <string name="buscar">Buscar</string>
    <string name="limite_de_pessoas">Limite de Pessoas</string>
    <string name="limite_de_horario">Limite de Horário</string>
    <string name="finalizar">Finalizar</string>
    <string name="digite_email">Digite o seu email</string>
    <string name="digite_senha">Digite a sua senha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirma_presença">Confirme a sua presença abaixo\npara ser atendido</string>
    <string name="priority_title">Verificação de prioridade</string>
    <string name="priority_content">Você faz parte do grupo de atendimento prioritário?</string>
    <string name="priority_yes">Sim</string>
    <string name="priority_no">Não</string>

</resources>