<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateQueueScreen">
    <ImageView
        android:id="@+id/image_ifila_logo"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_primaria" />

    <TextView
        android:id="@+id/criar_fila"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/criar_fila"
        android:textColor="@color/purple_main"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_ifila_logo" />

    <TextView
        android:id="@+id/preCadastro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/preCadastroFila"
        android:textColor="@color/gray_main"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/criar_fila" />
    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:elevation="0dp"
        android:fadeScrollbars="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preCadastro_text">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_field_limite_pessoas"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8.33dp"
            android:hint="@string/limite_de_pessoas">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLimitePessoas"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/roboto_medium"
                android:inputType="number"
                android:textSize="16sp"
                app:textInputLayoutFocusedRectEnabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_field_limite_tempo"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8.33dp"
            android:hint="@string/limite_de_horario">

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/editTextLimiteTempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:inputType="number"
                android:textAppearance="@style/Widget.AppCompat.EditText"
                android:textSize="16sp"
                app:mask="##:##" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_finalizar"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/finalizar"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_cancelar"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        android:textColor="@color/purple_main"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_finalizar"
        app:strokeColor="@color/purple_main" />

</androidx.constraintlayout.widget.ConstraintLayout>