<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserCodeQueueFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_codeSolicitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/digite_um_codigo_valido_de_estabelecimento"
            android:textAlignment="center"
            android:textColor="@color/gray_main"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/button_buscarEst"
            android:layout_width="220dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:text="@string/buscar"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_byCode" />

        <Button
            android:id="@+id/button_escanear"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="220dp"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            android:text="Escanear QR Code"
            android:textSize="16sp"
            app:icon="@drawable/ic_baseline_qr_code_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_ou" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/fredoka_one"
            android:text="@string/entrar_por_codigo"
            android:textColor="@color/purple_main"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_ou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/fredoka_medium"
            android:text="Ou"
            android:textAlignment="center"
            android:textColor="@color/gray_main"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_buscarEst" />

        <LinearLayout
            android:id="@+id/form_byCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:elevation="0dp"
            android:fadeScrollbars="false"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_codeSolicitation">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_field_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.33dp"
                android:hint="@string/codigo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCode"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:drawableTint="#BC2A2A"
                    android:fontFamily="@font/roboto_medium"
                    android:inputType="text"
                    android:maxLength="60"
                    android:textColorHint="#546E7A"
                    android:textSize="16sp"
                    app:textInputLayoutFocusedRectEnabled="false"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--<DatePicker
            android:id="@+id/date_Picker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/> -->

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>