<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".RegisterScreen2">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="96dp"
                android:layout_height="36dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_primaria" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/fredoka_one"
                android:text="Registrar"
                android:textColor="@color/purple_main"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:max="100"
                android:progress="66"
                android:progressBackgroundTint="#FFBF00"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/text_error_has_occured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/fredoka_medium"
                android:text="Defina suas informações de login"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:elevation="0dp"
                android:fadeScrollbars="false"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_error_has_occured">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_field_email"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8.33dp"
                    android:hint="Email"
                    app:helperText="@string/required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:fontFamily="@font/roboto_medium"
                        android:inputType="textEmailAddress"
                        android:textSize="16sp"
                        app:textInputLayoutFocusedRectEnabled="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_field_password"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8.33dp"
                    android:hint="Senha"
                    app:helperText="@string/required"
                    app:passwordToggleContentDescription="Exibir"
                    app:passwordToggleDrawable="@drawable/ic_baseline_visibility_24"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPasswd"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:fontFamily="@font/roboto_medium"
                        android:inputType="textPassword"
                        android:textSize="14sp"
                        app:textInputLayoutFocusedRectEnabled="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_field_password2"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:hint="Confirmar Senha"
                    app:helperText="@string/required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextConfirmPasswd"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:fontFamily="@font/roboto_medium"
                        android:inputType="textPassword"
                        android:textSize="14sp"
                        app:textInputLayoutFocusedRectEnabled="false" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button_continuar"
                android:layout_width="220dp"
                android:layout_height="55dp"
                android:layout_marginTop="32dp"
                android:text="@string/continuar"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearlayout" />

            <Button
                android:id="@+id/button_cancelar"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="220dp"
                android:layout_height="55dp"
                android:text="@string/cancel"
                android:textColor="@color/purple_main"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_continuar"
                app:strokeColor="@color/purple_main" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>